<resources>
    <string name="app_name">IT用語一覧</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="data_not_found">データがありません。</string>
    <string name="settings">設定</string>
    <string name="about_app">このアプリについて</string>
    <string name="word">用語</string>
    <string name="description">説明</string>
    <string name="qualification_list">資格一覧</string>

    <!-- 設定画面 -->
    <string name="edit">編集</string>
    <string name="moji_size">文字サイズ</string>
    <string name="small_str">小</string>
    <string name="default_str">デフォルト</string>
    <string name="big_str">大</string>
    <string name="general">全般</string>
    <string name="theme">テーマ</string>
    <string name="close">閉じる</string>

    <!-- このアプリについて画面 -->
    <string name="version">バージョン</string>
    <string name="license">ライセンス</string>
    <string name="privacy_policy">プライバシーポリシー</string>

    <string name="word_list">用語一覧</string>

    <string name="word_detail">用語詳細</string>

</resources>