<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_title_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:textSize="16sp"
                android:text="@string/edit"
                android:textStyle="bold"
                android:textColor="?attr/colorAccent"
                android:paddingStart="72dp"
                android:gravity="bottom"
                android:paddingBottom="8dp"/>

            <LinearLayout
                android:id="@+id/moji_size"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/moji_size_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/moji_size"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/moji_size_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/default_str"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorSettingDivider"/>

            <TextView
                android:id="@+id/general_title_text"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textSize="16sp"
                android:text="@string/general"
                android:textStyle="bold"
                android:textColor="?attr/colorAccent"
                android:paddingStart="72dp"
                android:gravity="bottom"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/theme"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="72dp"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
