<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/version_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/version"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/versionNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0.0"
                        android:textColor="@color/colorGray"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/license"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="72dp"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/privacy_policy"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="72dp"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
